feat: AI报告、支付文档、404日志修复、概览数据修复